--- a/styles/style.css
+++ b/styles/style.css
@@ -19,7 +19,7 @@ body {
     --footer-height: 25px;
     
     font-family: 'Titillium Web', sans-serif;
-    background-color: var(--color2);
+    background-color: lavender;
 }
 
 main {
