results feedback working

--- a/styles/style.css
+++ b/styles/style.css
@@ -103,7 +103,7 @@ footer {
     display: block;
     width: 80%;
     height: 540px;
-    background-color: navy;
+    background-color: grey;
     color: white;
 }
 
