--- a/styles/style.css
+++ b/styles/style.css
@@ -18,7 +18,6 @@ body {
     --gutter: 30px;
     --footer-height: 25px;
     
-    font-family: 'Titillium Web', sans-serif;
     background-color: lavender;
 }
 
@@ -47,10 +46,14 @@ section {
 
 header {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     background-color: var(--color3);
     height: var(--header-height);
     box-shadow: var(--shadow);
+    font-family: 'East Sea Dokdo', cursive;
+    font-size: 3rem;
+    font-style: oblique;
+    color:darkcyan;
 }
 
 footer {
