--- a/styles/style.css
+++ b/styles/style.css
@@ -1,106 +1,36 @@
 
 body {
-    /* https://coolors.co/generate and click export -> scss to get the colors to copy and paste below*/
-    /* --color1: hsla(349, 69%, 76%, 1);
-    --color2: hsla(207, 67%, 44%, 1);
-    --color3: hsla(200, 61%, 56%, 1);
-    --color4: hsla(187, 41%, 94%, 1);
-    --color5: hsla(170, 28%, 95%, 1); */
-/* 
-    /* --color1: hsla(45, 86%, 83%, 1);
-    --color2: hsla(135, 65%, 98%, 1);
-    --color3: hsla(315, 37%, 86%, 1);
-    --color4: hsla(45, 73%, 98%, 1);
-    --color5: hsla(224, 40%, 79%, 1); */
-    
     --header-height: 80px;
-    --shadow: 0px 10px 20px -12px rgba(0,0,0,0.45);
-    --gutter: 30px;
-    --footer-height: 25px;
+    --shadow: 0px 10px 20px -12px royalblue;
     
-    background-color: lavender;
+    /* background-image: url(./Baltoro_glacier_from_air_cropped.jpg); */
+    color: rgb(126, 126, 126);
+    font-family: 'Press Start 2P', cursive;
+    font-size: 0.8rem;
 }
+
+/*font-family: 'Press Start 2P', cursive;*/
 
 main {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-bottom: calc(var(--footer-height));
 }
 
 section {
-    background-color: var(--color5);
-    width: 1000px;
-    max-width: 80%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding-top: var(--gutter);
-    padding-bottom: var(--gutter);
-    margin-top: var(--gutter);
-    margin-bottom: var(--gutter);
-    border: solid 2px var(--color1);
+
 }
 
 header {
-    display: flex;
-    justify-content: center;
-    background-color: var(--color3);
-    height: var(--header-height);
+    display: grid;
+    grid-template-columns: 15% 70% 15%;
+    height: 80px;
     box-shadow: var(--shadow);
-    font-family: 'East Sea Dokdo', cursive;
-    font-size: 3rem;
-    font-style: oblique;
-    color:darkcyan;
+    background-color: white;
+
 }
 
-footer {
-    display: flex;
-    justify-content: flex-end;
-    background-color: var(--color3);
-    box-shadow: var(--shadow);
-}
-
-
-h2 {
-    font-size: 1.8rem;
-    font-weight: bold;
-}
-
-.gutter-right {
-    margin-right: 20px;
-}
-
-.main-logo {
-    animation: pulse 5s infinite ease-in-out;
-}
-
-header img {
-    height: var(--header-height);
-}
-
-
-
-content {
-    width: 80%;
-}
-
-p {
-    margin: var(--gutter);
-}
-  
-footer {
-    position: fixed;
-    width: 100%;
-    bottom: 0;
-    height: var(--footer-height);
-    display: flex;
-    justify-content: flex-end;
-    background-color: var(--color3);
-    box-shadow: var(--shadow);
-}
   
 .map-area {
     display: block;
@@ -108,8 +38,51 @@ footer {
     height: 540px;
     background-color: grey;
     color: white;
+    font-family: default;
+    font-size: default;
+}
+
+.game-head {
+    align-items: center;
 }
 
 .adventure-title {
-    color: black;
+    font-family: 'East Sea Dokdo', cursive;
+    font-size: 4rem;
+    font-style: oblique;
+    color:royalblue;
+    padding: 0px 0px 10px 0px; 
+
+}
+
+#player-stats {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: right;
+    font-size: 0.7rem;
+}
+
+.logo-box {
+    justify-content: right;
+}
+
+.game-start {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border: 1px double royalblue;
+    width: 560px;
+    background-color: white;
+}
+
+.start-button, .user-controls {
+    display: block;
+    margin: 15px;
+}
+
+.start-button {
+    background-color: royalblue;
+    color: white;
 }
