--- a/styles/quest-pages.css
+++ b/styles/quest-pages.css
@@ -1,5 +1,4 @@
 body {
-    --shadow: 0px 10px 20px -12px rgb(120, 149, 236);
     color: rgb(126, 126, 126);
     font-family: 'Press Start 2P', cursive;
     font-size: 0.8rem;
@@ -59,73 +58,50 @@ header {
 }
 
 .border-bar {
-    box-shadow: var(--shadow);
     background-color: rgb(120, 149, 236);
 }
 
 main {
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
-    flex-wrap: flex;
-    align-items: center;
     justify-content: center;
-    height: 80%;
-    width: 80%;
+    align-items: center;
+    background-color: gray;
+}
+
+.lead-text {
     margin: 20px;
-
-}
-
-.start-screen {
-    display: grid;
-    grid-template-columns: 15% 70% 15%;
-    justify-content: center;
-    align-items: center;
-}
-
-
-.game-start {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 1px double rgb(120, 149, 236);
-    width: 480px;
-    height: 360px;
-    background-color: white;
-    border-radius: 20px;
-    margin: 20px;
-}
-
-.user-controls {
-    display: block;
-    align-items: center;
-    justify-content: center;
-}
-
-.start-button {
-    display: block;
-    margin: 15px;
-}
-
-.start-button {
-    display: block;
-    background-color: royalblue;
-    color: white;
-}
-
-#player-stats {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: right;
-    font-size: .8rem;
+    text-align: center;
 }
 
 .map-area {
-    display: flex;
-    width: 80%;
-    height: 540px;
-    background-color: grey;
+    width: 800px;
+    height: 560px;
+    background-color:  rgb(120, 149, 236);
+    border: rgb(120, 149, 236);
     color: white;
-    font-family: default;
-    font-size: default;
+}
+
+.quest-flex {
+    display: block;
+    color: white;
+    height: 500px;
+    align-items: justify;
+}
+
+
+.quest-scene {
+    display: block;
+}
+
+.quest-area {
+    display: block;
+    justify-content: left;
+    align-items: bottom;
+}
+
+.results-area {
+    color: white;
 }
