map area and quest position adjustments

--- a/styles/quest-pages.css
+++ b/styles/quest-pages.css
@@ -37,6 +37,7 @@ header {
     font-style: oblique;
     color:rgb(120, 149, 236);
     padding: 0px 0px 10px 0px; 
+    /*text-shadow: -1px -1px 0 grey, 1px -1px 0 grey, -1px 1px 0 grey, 1px 1px 0 grey;*/
 }
 
 .aurora-colors {
@@ -68,12 +69,13 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: gray;
+    background-color: rgb(120, 149, 236);
 }
 
 .lead-text {
     margin: 20px;
     text-align: center;
+    color: white;
 }
 
 .map-area {
@@ -82,6 +84,10 @@ main {
     background-color:  rgb(120, 149, 236);
     border: rgb(120, 149, 236);
     color: white;
+}
+
+ul {
+    position: relative;
 }
 
 .quest-flex {
